# cosmic-ext-applet-sysinfo

./: Cargo.toml  README.md  justfile
extra/: applet_sysinfo.desktop
src/: applet.rs  lib.rs  main.rs
